tests/typing/bad/testfile-redeclared-1.go
package main
type T struct {}
func main() {}
type T struct {}
